<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cabin Trivia</string>
    <string name="quiz_complete">Quiz complete</string>
    <string name="score_format">You got %1$d of %2$d</string>
    <string name="play_again">Play again</string>
    <string name="topic_airport_codes">Airport codes</string>
    <string name="topic_airlines">Airlines</string>
    <string name="topic_famous_flights">Famous flights</string>
    <string name="topic_meteorology">Meteorology</string>
    <string name="progress_format">%1$d of %2$d</string>
    <string name="continue_button">Continue</string>
    <string name="start_title">Cabin Trivia</string>
    <string name="start_short">Short pack</string>
    <string name="start_full">Full catalog</string>
</resources>
